Toggling the visibility of the correct element
Previously, my code didn't focus the actual dropdown, but rather the div containing the dropdown

--- a/sandboxstyle.css
+++ b/sandboxstyle.css
@@ -58,7 +58,7 @@ ul {
 #dropdown-toggler {
   border-radius: 50%;
 }
-#dropdown-toggler:hover .dropdown {
+#dropdown-toggler:hover .dropdown-content {
   display: block;
 }
 
